--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "astro": "^3.6.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "volta": "^0.0.0"
+  },
+  "volta": {
+    "node": "20.10.0",
+    "npm": "10.2.3"
   }
 }
